fix: convert Year to int

--- a/notebooks/bibliona_recsys.ipynb
+++ b/notebooks/bibliona_recsys.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -78,11 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from typing import Optional\n",
     "\n",
     "from pathlib import Path\n",
     "from typing import List, Tuple, Dict, Set\n",
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +330,7 @@
        "[5 rows x 797 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +422,7 @@
        "4  Metadata sparsity ratio (0 = dense, 1 = empty)    0.982766"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,30 +661,54 @@
     "    top_n: int,\n",
     "    bewertung_df: pd.DataFrame,\n",
     "    itemprofile_df: pd.DataFrame\n",
-    ") -> List[Tuple[str, float, str, Dict]]:\n",
+    ") -> List[Tuple[str, float, str, Dict, Dict[str, str]]]:\n",
+    "    \"\"\"\n",
+    "    Generate top-N recommendations for a user, including confidence, explanation, and selected metadata.\n",
+    "    \"\"\"\n",
     "    try:\n",
-    "        inner_user_id = trainset.to_inner_uid(user_id)\n",
-    "        rated_items = set(trainset.to_raw_iid(iid) for (iid, _) in trainset.ur[inner_user_id])\n",
-    "        all_items = set(trainset._raw2inner_id_items.keys())\n",
-    "        unseen_items = list(all_items - rated_items)\n",
+    "        inner_user_id: int = trainset.to_inner_uid(user_id)\n",
+    "        rated_items: set[str] = set(trainset.to_raw_iid(iid) for (iid, _) in trainset.ur[inner_user_id])\n",
+    "        all_items: set[str] = set(trainset._raw2inner_id_items.keys())\n",
+    "        unseen_items: list[str] = list(all_items - rated_items)\n",
     "\n",
-    "        raw_predictions = [(iid, algo.predict(user_id, iid).est) for iid in unseen_items]\n",
-    "        scores = [s for _, s in raw_predictions]\n",
+    "        # Generate predictions for all unseen items\n",
+    "        predictions: list[Tuple[str, float]] = []\n",
+    "        for item_id in unseen_items:\n",
+    "            pred = algo.predict(user_id, item_id)\n",
+    "            predictions.append((item_id, pred.est))\n",
+    "\n",
+    "        scores: list[float] = [score for _, score in predictions]\n",
     "        if scores:\n",
-    "            scaler = MinMaxScaler()\n",
-    "            scaled = scaler.fit_transform(np.array(scores).reshape(-1, 1)).flatten()\n",
-    "            enriched_preds = []\n",
-    "            for (iid, _), score in zip(raw_predictions, scaled):\n",
-    "                confidence = compute_confidence(score)\n",
-    "                explanation = explain_prediction(algo, user_id, iid)\n",
-    "                enriched_preds.append((iid, score, confidence, explanation))\n",
-    "            return sorted(enriched_preds, key=lambda x: x[1], reverse=True)[:top_n]\n",
+    "            scaler: MinMaxScaler = MinMaxScaler()\n",
+    "            scaled_scores: np.ndarray = scaler.fit_transform(np.array(scores).reshape(-1, 1)).flatten()\n",
+    "            enriched_predictions: list[Tuple[str, float, str, Dict, Dict[str, str]]] = []\n",
+    "            for (item_id, _), scaled_score in zip(predictions, scaled_scores):\n",
+    "                confidence: str = compute_confidence(scaled_score)\n",
+    "                explanation: Dict = explain_prediction(algo, user_id, item_id)\n",
+    "                # Lookup metadata\n",
+    "                book_row: Optional[pd.Series] = itemprofile_df.loc[itemprofile_df['item_ID'] == item_id].squeeze() if not itemprofile_df[itemprofile_df['item_ID'] == item_id].empty else None\n",
+    "                metadata: Dict[str, str] = {\n",
+    "                    'Book-Title': book_row['Book-Title'] if book_row is not None and 'Book-Title' in book_row else 'Unknown',\n",
+    "                    'Publication_Year': book_row['Publication_Year'] if book_row is not None and 'Publication_Year' in book_row else 'Unknown',\n",
+    "                    'Publisher': book_row['Publisher'] if book_row is not None and 'Publisher' in book_row else 'Unknown'\n",
+    "                }\n",
+    "                enriched_predictions.append((item_id, scaled_score, confidence, explanation, metadata))\n",
+    "            return sorted(enriched_predictions, key=lambda x: x[1], reverse=True)[:top_n]\n",
     "        return []\n",
     "    except ValueError:\n",
     "        # Cold-start fallback\n",
     "        if str(user_id) in bewertung_df.index:\n",
-    "            fallback = list(bewertung_df.loc[str(user_id)].sort_values(ascending=False).head(top_n).items())\n",
-    "            return [(iid, 1.0, \"Low\", {}) for iid, _ in fallback]\n",
+    "            fallback: list[Tuple[str, float]] = list(bewertung_df.loc[str(user_id)].sort_values(ascending=False).head(top_n).items())\n",
+    "            fallback_recommendations: list[Tuple[str, float, str, Dict, Dict[str, str]]] = []\n",
+    "            for iid, _ in fallback:\n",
+    "                book_row: Optional[pd.Series] = itemprofile_df.loc[itemprofile_df['item_ID'] == iid].squeeze() if not itemprofile_df[itemprofile_df['item_ID'] == iid].empty else None\n",
+    "                metadata: Dict[str, str] = {\n",
+    "                    'Book-Title': book_row['Book-Title'] if book_row is not None and 'Book-Title' in book_row else 'Unknown',\n",
+    "                    'Publication_Year': book_row['Publication_Year'] if book_row is not None and 'Publication_Year' in book_row else 'Unknown',\n",
+    "                    'Publisher': book_row['Publisher'] if book_row is not None and 'Publisher' in book_row else 'Unknown'\n",
+    "                }\n",
+    "                fallback_recommendations.append((iid, 1.0, \"Low\", {}, metadata))\n",
+    "            return fallback_recommendations\n",
     "        return []"
    ]
   },
@@ -703,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,41 +791,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hier passiert alles: Daten laden, Vorverarbeitung, Training, Evaluation und Anzeigen der Top-Empfehlungen mit Confidence und Erklärung. Ideal für direkte Runs oder als Einstiegspunkt für weitere Tests."
+    "Hier passiert alles: Daten laden, Vorverarbeitung, Training, Evaluation und Anzeigen der Top-Empfehlungen mit Confidence und Erklärung."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation Results: {'MAE': 1.1382262440820807, 'RMSE': 1.5398554806003166, 'Precision@K': 0.003913043478260871, 'Recall@K': 0.02716183574879227}\n",
+      "Evaluation Results: {'MAE': 1.1471790595145435, 'RMSE': 1.5410261215589736, 'Precision@K': 0.004057971014492756, 'Recall@K': 0.03060386473429952}\n",
       "\n",
       "Top 10 recommendations for user 243:\n",
-      "Item ID: 0345339738, Score: 1.00, Confidence: High\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.0010588749393593089, 'item_bias': 1.343942962588493, 'interaction': 0.06423197052692262, 'final_pred': 9.3844203996359}\n",
-      "Item ID: 0877017883, Score: 1.00, Confidence: High\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.0010588749393593089, 'item_bias': 1.146294013669592, 'interaction': 0.26046834762399096, 'final_pred': 9.383007827814067}\n",
-      "Item ID: 0679723161, Score: 0.97, Confidence: High\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.0010588749393593089, 'item_bias': 1.2302347513311311, 'interaction': 0.027248870936890157, 'final_pred': 9.233729088788506}\n",
-      "Item ID: 0553274295, Score: 0.96, Confidence: High\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.0010588749393593089, 'item_bias': 1.5652208353755457, 'interaction': -0.3570835322008141, 'final_pred': 9.184382769695215}\n",
-      "Item ID: 0064400557, Score: 0.95, Confidence: High\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.0010588749393593089, 'item_bias': 1.1116968661237203, 'interaction': 0.04250072597974743, 'final_pred': 9.130443058623952}\n",
-      "Item ID: 0671041789, Score: 0.94, Confidence: High\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.0010588749393593089, 'item_bias': 0.8020245821424784, 'interaction': 0.3413853112208284, 'final_pred': 9.11965535988379}\n",
-      "Item ID: 0590353403, Score: 0.94, Confidence: High\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.0010588749393593089, 'item_bias': 0.7519035235367183, 'interaction': 0.37437244369173567, 'final_pred': 9.102521433748937}\n",
-      "Item ID: 0439139597, Score: 0.94, Confidence: High\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.0010588749393593089, 'item_bias': 0.9668713508510541, 'interaction': 0.15851520116600976, 'final_pred': 9.101632018537547}\n",
-      "Item ID: 055321313X, Score: 0.93, Confidence: High\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.0010588749393593089, 'item_bias': 0.9637853646324013, 'interaction': 0.11357745500407798, 'final_pred': 9.053608286156964}\n",
-      "Item ID: 0812550706, Score: 0.93, Confidence: High\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.0010588749393593089, 'item_bias': 1.079270093501496, 'interaction': -0.02530287467656841, 'final_pred': 9.030212685345413}\n"
+      "Item ID: 0553274295, Score: 1.00, Confidence: High\n",
+      "   Title: Where the Red Fern Grows\n",
+      "   Year: 2016, Publisher: Random House Children's Books\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.6418491560626969, 'interaction': 0.14225697706676954, 'final_pred': 9.774113769433809}\n",
+      "Item ID: 0345339738, Score: 0.94, Confidence: High\n",
+      "   Title: The Return of the King (The Lord of the Rings, Part 3)\n",
+      "   Year: 1986, Publisher: Del Rey\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.321671797937582, 'interaction': 0.12699399212359982, 'final_pred': 9.438673426365524}\n",
+      "Item ID: 0446310786, Score: 0.91, Confidence: High\n",
+      "   Title: To Kill a Mockingbird\n",
+      "   Year: 1993, Publisher: Little Brown & Company\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 0.994944366726078, 'interaction': 0.3223539166381699, 'final_pred': 9.30730591966859}\n",
+      "Item ID: 0345361792, Score: 0.89, Confidence: High\n",
+      "   Title: A Prayer for Owen Meany\n",
+      "   Year: 1990, Publisher: Ballantine Books\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.0797546541605776, 'interaction': 0.12947519594509732, 'final_pred': 9.199237486410016}\n",
+      "Item ID: 0812550706, Score: 0.89, Confidence: High\n",
+      "   Title: Ender's Game (Ender Wiggins Saga (Paperback))\n",
+      "   Year: 2013, Publisher: Tor Books\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.0634709832865143, 'interaction': 0.11186594257452455, 'final_pred': 9.165344562165382}\n",
+      "Item ID: 0877017883, Score: 0.89, Confidence: High\n",
+      "   Title: Griffin & Sabine: An Extraordinary Correspondence\n",
+      "   Year: 1991, Publisher: Chronicle Books\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.14540827626748, 'interaction': 0.026897050685567244, 'final_pred': 9.16231296325739}\n",
+      "Item ID: 0553573403, Score: 0.88, Confidence: High\n",
+      "   Title: A Game of Thrones (A Song of Ice and Fire, Book 1)\n",
+      "   Year: 2011, Publisher: Spectra Books\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 0.9520238417208304, 'interaction': 0.19726110223704088, 'final_pred': 9.139292580262213}\n",
+      "Item ID: 0312195516, Score: 0.88, Confidence: High\n",
+      "   Title: The Red Tent (Bestselling Backlist)\n",
+      "   Year: 1997, Publisher: Picador USA\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 0.6864965068054458, 'interaction': 0.4444113762108604, 'final_pred': 9.120915519320649}\n",
+      "Item ID: 0679723161, Score: 0.88, Confidence: High\n",
+      "   Title: Lolita (Vintage International)\n",
+      "   Year: 1997, Publisher: Vintage\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.1570895316399477, 'interaction': -0.04101395793017446, 'final_pred': 9.106083210014116}\n",
+      "Item ID: 0451166892, Score: 0.87, Confidence: High\n",
+      "   Title: The Pillars of the Earth\n",
+      "   Year: 2001, Publisher: Signet Book\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 0.912034663616187, 'interaction': 0.16694108314459521, 'final_pred': 9.068983383065124}\n"
      ]
     }
    ],
@@ -828,8 +873,12 @@
     "    )\n",
     "\n",
     "    print(f\"\\nTop 10 recommendations for user {example_user}:\")\n",
-    "    for item_id, score, confidence, explanation in recommendations:\n",
+    "    for item_id, score, confidence, explanation, book_metadata in recommendations:\n",
+    "        publication_year = book_metadata['Publication_Year']\n",
+    "        publication_year_int: int = int(publication_year) if not pd.isnull(publication_year) else None\n",
     "        print(f\"Item ID: {item_id}, Score: {score:.2f}, Confidence: {confidence}\")\n",
+    "        print(f\"   Title: {book_metadata['Book-Title']}\")\n",
+    "        print(f\"   Year: {publication_year_int}, Publisher: {book_metadata['Publisher']}\")\n",
     "        print(f\"   → Explain: {explanation}\")\n",
     "\n",
     "\n",
