--- a/notebooks/bibliona_recsys.ipynb
+++ b/notebooks/bibliona_recsys.ipynb
@@ -1333,6 +1333,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1344,8 +1351,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. User Analysis Functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,73 +1482,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User 243 Rating Analysis\n",
-      "User 243 has rated 10 books\n",
-      "Average rating: 7.9\n",
-      "\n",
-      "Rating distribution:\n",
-      "  5.0 points: 1 books\n",
-      "  6.0 points: 1 books\n",
-      "  7.0 points: 3 books\n",
-      "  9.0 points: 3 books\n",
-      "  10.0 points: 2 books\n",
-      "\n",
-      "Top 5 rated books:\n",
-      "  1. The Bean Trees - 10.0 points\n",
-      "  2. Memoirs of a Geisha - 10.0 points\n",
-      "  3. The Pilot's Wife : A Novel - 9.0 points\n",
-      "  4. Unnatural Exposure - 9.0 points\n",
-      "  5. The General's Daughter - 9.0 points\n",
-      "\n",
-      "=== User 243 Preferences Analysis ===\n",
-      "Top 5 Authors (by average rating):\n",
-      "  1. Barbara Kingsolver - 10.0 points (1 books)\n",
-      "  2. Arthur Golden - 10.0 points (1 books)\n",
-      "  3. Anita Shreve - 9.0 points (1 books)\n",
-      "  4. Patricia Cornwell - 9.0 points (1 books)\n",
-      "  5. Nelson De Mille - 9.0 points (1 books)\n",
-      "\n",
-      "Top 5 Genres (by average rating):\n",
-      "  1. Fiction, coming of age - 10.0 points (1 books)\n",
-      "  2. Fiction, humorous, general - 10.0 points (1 books)\n",
-      "  3. Friendship - 10.0 points (1 books)\n",
-      "  4. Friendship, fiction - 10.0 points (1 books)\n",
-      "  5. Literature - 10.0 points (2 books)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test the new functions for user 243\n",
-    "print(\"User 243 Rating Analysis\")\n",
+    "print(\"=== User 243 Rating Analysis ===\")\n",
     "rating_analysis = analyze_user_rating_distribution(243, ratings_df, itemprofile_df)\n",
     "if 'error' not in rating_analysis:\n",
     "    print(f\"User {rating_analysis['user_id']} has rated {rating_analysis['total_ratings']} books\")\n",
     "    print(f\"Average rating: {rating_analysis['average_rating']}\")\n",
     "    print(\"\\nRating distribution:\")\n",
     "    for stars, count in rating_analysis['rating_distribution'].items():\n",
-    "        print(f\"  {stars} points: {count} books\")\n",
+    "        print(f\"  {stars} stars: {count} books\")\n",
     "    \n",
     "    print(f\"\\nTop 5 rated books:\")\n",
     "    for i, book in enumerate(rating_analysis['rated_books'][:5]):\n",
-    "        print(f\"  {i+1}. {book['title']} - {book['rating']} points\")\n",
+    "        print(f\"  {i+1}. {book['title']} - {book['rating']} stars\")\n",
     "\n",
     "print(\"\\n=== User 243 Preferences Analysis ===\")\n",
     "preferences_analysis = analyze_user_preferences(243, ratings_df, itemprofile_df)\n",
     "if 'error' not in preferences_analysis:\n",
     "    print(\"Top 5 Authors (by average rating):\")\n",
     "    for i, author in enumerate(preferences_analysis['author_preferences'][:5]):\n",
-    "        print(f\"  {i+1}. {author['author']} - {author['average_rating']} points ({author['books_rated']} books)\")\n",
+    "        print(f\"  {i+1}. {author['author']} - {author['average_rating']} stars ({author['books_rated']} books)\")\n",
     "    \n",
     "    print(\"\\nTop 5 Genres (by average rating):\")\n",
     "    for i, genre in enumerate(preferences_analysis['genre_preferences'][:5]):\n",
-    "        print(f\"  {i+1}. {genre['genre']} - {genre['average_rating']} points ({genre['books_rated']} books)\")\n",
+    "        print(f\"  {i+1}. {genre['genre']} - {genre['average_rating']} stars ({genre['books_rated']} books)\")\n",
     "else:\n",
     "    print(preferences_analysis['error'])"
    ]
