fix: rerun notebook

--- a/notebooks/bibliona_recsys.ipynb
+++ b/notebooks/bibliona_recsys.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "[5 rows x 797 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "[5 rows x 797 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "[5 rows x 782 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "4  Metadata sparsity ratio (0 = dense, 1 = empty)    0.982766"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,56 +1242,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation Results: {'MAE': 1.1471790595145435, 'RMSE': 1.5410261215589736, 'Precision@K': 0.004057971014492756, 'Recall@K': 0.03060386473429952}\n",
+      "Evaluation Results: {'MAE': 1.1489756331550751, 'RMSE': 1.541152670073595, 'Precision@K': 0.0033333333333333344, 'Recall@K': 0.02342995169082126}\n",
       "\n",
       "Top 10 recommendations for user 243:\n",
       "Item ID: 0553274295, Score: 1.00, Confidence: High\n",
       "   Title: Where the Red Fern Grows\n",
       "   Year: 2016, Publisher: Random House Children's Books\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.6418491560626969, 'interaction': 0.14225697706676954, 'final_pred': 9.774113769433809}\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.6607127219437223, 'interaction': 0.03230855405558424, 'final_pred': 9.630750942368923}\n",
       "Item ID: 0345339738, Score: 0.94, Confidence: High\n",
       "   Title: The Return of the King (The Lord of the Rings, Part 3)\n",
       "   Year: 1986, Publisher: Del Rey\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.321671797937582, 'interaction': 0.12699399212359982, 'final_pred': 9.438673426365524}\n",
-      "Item ID: 0446310786, Score: 0.91, Confidence: High\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.3018960295227409, 'interaction': 0.07060797142738144, 'final_pred': 9.31023366731974}\n",
+      "Item ID: 0446310786, Score: 0.93, Confidence: High\n",
       "   Title: To Kill a Mockingbird\n",
       "   Year: 1993, Publisher: Little Brown & Company\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 0.994944366726078, 'interaction': 0.3223539166381699, 'final_pred': 9.30730591966859}\n",
-      "Item ID: 0345361792, Score: 0.89, Confidence: High\n",
-      "   Title: A Prayer for Owen Meany\n",
-      "   Year: 1990, Publisher: Ballantine Books\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.0797546541605776, 'interaction': 0.12947519594509732, 'final_pred': 9.199237486410016}\n",
-      "Item ID: 0812550706, Score: 0.89, Confidence: High\n",
-      "   Title: Ender's Game (Ender Wiggins Saga (Paperback))\n",
-      "   Year: 2013, Publisher: Tor Books\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.0634709832865143, 'interaction': 0.11186594257452455, 'final_pred': 9.165344562165382}\n",
-      "Item ID: 0877017883, Score: 0.89, Confidence: High\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.0238176133437267, 'interaction': 0.2805794702820169, 'final_pred': 9.24212674999536}\n",
+      "Item ID: 0877017883, Score: 0.93, Confidence: High\n",
       "   Title: Griffin & Sabine: An Extraordinary Correspondence\n",
       "   Year: 1991, Publisher: Chronicle Books\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.14540827626748, 'interaction': 0.026897050685567244, 'final_pred': 9.16231296325739}\n",
-      "Item ID: 0553573403, Score: 0.88, Confidence: High\n",
-      "   Title: A Game of Thrones (A Song of Ice and Fire, Book 1)\n",
-      "   Year: 2011, Publisher: Spectra Books\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 0.9520238417208304, 'interaction': 0.19726110223704088, 'final_pred': 9.139292580262213}\n",
-      "Item ID: 0312195516, Score: 0.88, Confidence: High\n",
-      "   Title: The Red Tent (Bestselling Backlist)\n",
-      "   Year: 1997, Publisher: Picador USA\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 0.6864965068054458, 'interaction': 0.4444113762108604, 'final_pred': 9.120915519320649}\n",
-      "Item ID: 0679723161, Score: 0.88, Confidence: High\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.100514032327014, 'interaction': 0.17127901114755595, 'final_pred': 9.209522709844187}\n",
+      "Item ID: 0439136369, Score: 0.92, Confidence: High\n",
+      "   Title: Harry Potter and the Prisoner of Azkaban (Book 3)\n",
+      "   Year: 1999, Publisher: Scholastic\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 0.9381942599825042, 'interaction': 0.31813973395019635, 'final_pred': 9.19406366030232}\n",
+      "Item ID: 0679723161, Score: 0.92, Confidence: High\n",
       "   Title: Lolita (Vintage International)\n",
       "   Year: 1997, Publisher: Vintage\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 1.1570895316399477, 'interaction': -0.04101395793017446, 'final_pred': 9.106083210014116}\n",
-      "Item ID: 0451166892, Score: 0.87, Confidence: High\n",
-      "   Title: The Pillars of the Earth\n",
-      "   Year: 2001, Publisher: Signet Book\n",
-      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': 0.01270329484449787, 'item_bias': 0.912034663616187, 'interaction': 0.16694108314459521, 'final_pred': 9.068983383065124}\n"
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.236894921154593, 'interaction': -0.007622696021822665, 'final_pred': 9.167001891502387}\n",
+      "Item ID: 0345339681, Score: 0.91, Confidence: High\n",
+      "   Title: The Hobbit : The Enchanting Prelude to The Lord of the Rings\n",
+      "   Year: 1956, Publisher: Del Rey\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 0.8307532397360499, 'interaction': 0.32766927072813185, 'final_pred': 9.0961521768338}\n",
+      "Item ID: 043935806X, Score: 0.91, Confidence: High\n",
+      "   Title: Harry Potter and the Order of the Phoenix (Book 5)\n",
+      "   Year: 2003, Publisher: Scholastic\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 0.9645977204275015, 'interaction': 0.18910792620870015, 'final_pred': 9.09143531300582}\n",
+      "Item ID: 0812550706, Score: 0.90, Confidence: High\n",
+      "   Title: Ender's Game (Ender Wiggins Saga (Paperback))\n",
+      "   Year: 2013, Publisher: Tor Books\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.0470816835933647, 'interaction': 0.10105780281819457, 'final_pred': 9.085869152781177}\n",
+      "Item ID: 0345465083, Score: 0.90, Confidence: High\n",
+      "   Title: Seabiscuit\n",
+      "   Year: 2002, Publisher: Ballantine Books\n",
+      "   → Explain: {'global_mean': 7.977304341459844, 'user_bias': -0.03957467509022623, 'item_bias': 1.0608192097793536, 'interaction': 0.052099573824475484, 'final_pred': 9.050648449973448}\n"
      ]
     }
    ],
@@ -1333,13 +1333,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1359,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,9 +1475,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== User 243 Rating Analysis ===\n",
+      "User 243 has rated 10 books\n",
+      "Average rating: 7.9\n",
+      "\n",
+      "Rating distribution:\n",
+      "  5.0 stars: 1 books\n",
+      "  6.0 stars: 1 books\n",
+      "  7.0 stars: 3 books\n",
+      "  9.0 stars: 3 books\n",
+      "  10.0 stars: 2 books\n",
+      "\n",
+      "Top 5 rated books:\n",
+      "  1. The Bean Trees - 10.0 stars\n",
+      "  2. Memoirs of a Geisha - 10.0 stars\n",
+      "  3. The Pilot's Wife : A Novel - 9.0 stars\n",
+      "  4. Unnatural Exposure - 9.0 stars\n",
+      "  5. The General's Daughter - 9.0 stars\n",
+      "\n",
+      "=== User 243 Preferences Analysis ===\n",
+      "Top 5 Authors (by average rating):\n",
+      "  1. Barbara Kingsolver - 10.0 stars (1 books)\n",
+      "  2. Arthur Golden - 10.0 stars (1 books)\n",
+      "  3. Anita Shreve - 9.0 stars (1 books)\n",
+      "  4. Patricia Cornwell - 9.0 stars (1 books)\n",
+      "  5. Nelson De Mille - 9.0 stars (1 books)\n",
+      "\n",
+      "Top 5 Genres (by average rating):\n",
+      "  1. Fiction, coming of age - 10.0 stars (1 books)\n",
+      "  2. Fiction, humorous, general - 10.0 stars (1 books)\n",
+      "  3. Friendship - 10.0 stars (1 books)\n",
+      "  4. Friendship, fiction - 10.0 stars (1 books)\n",
+      "  5. Literature - 10.0 stars (2 books)\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the new functions for user 243\n",
     "print(\"=== User 243 Rating Analysis ===\")\n",
